--- a/style.css
+++ b/style.css
@@ -654,3 +654,13 @@ background: grey;
   top: 200px;
 }
 
+.next, .prev {
+	color: white;
+	font-size: 30px;
+	height: 60px;
+	width: 40px;
+	border: 1px solid white;
+	border-radius: 10px 0 10px 0;
+	position: relative;
+	top: 200px;
+}
