--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ body {
 	border-bottom-right-radius: 30px;
 
 	position: relative;
-	margin-right: 30px;
+	margin: 0 30px !important;
 }
 
 .event:nth-child(4) {
@@ -544,29 +544,6 @@ body {
 background: grey;
 }
 
-.switcher {
-	position: absolute;
-	color: white;
-	border: 1px solid white;
-	opacity: 0.5;
-	width: 40px;
-	height: 60px;
-	border-top-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-	display: flex;
-	align-self: center;
-	font-size: 20px;
-	padding-top: 12px;
-	padding-left: 10px;
-}
-
-.events_previous {
-	left: 0;
-}
-
-.events_next {
-	right: 0;
-}
 
 /* FOOTER */
 .footer {
@@ -632,27 +609,18 @@ background: grey;
 	transition: all 0.2s linear;
 }
 
-/* SLIDER */
+/* SLIDER */    
 
 .slick-list {
-  width: 1140px;
+  width: 1110px;
+	height: 500px;
 }
 
-.slick-slide > div {
-	margin:0 15px;
-}
+/* .slick-slide  {
 
+	width: 350px !important;
+} */
 
-
-.slick-prev,.slick-next {
-  width: 40px;
-  height: 60px;
-  border-radius: 10px 0 10px 0;
-  border: 1px solid white;
-  color: white;
-  position: relative;
-  top: 200px;
-}
 
 .next, .prev {
 	color: white;
@@ -663,4 +631,13 @@ background: grey;
 	border-radius: 10px 0 10px 0;
 	position: relative;
 	top: 200px;
+	background-color: transparent !important;
 }
+
+/* .next {
+	right: 30px;
+}
+
+.next {
+	right: 30px;
+} */
