--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img, svg {
 body {
 	font-family: "Poppins";
 	background-color: #1c1c21;
-	min-width: 1920px;
+	width: 1800px;
   margin: 0 auto;
 }
 
@@ -18,7 +18,7 @@ body {
 }
 
 .header {
-	width: 1920px;
+	width: 100%;
 	height: 100%;
 	margin: 0 auto;
 	position: relative;
@@ -33,13 +33,9 @@ body {
 	padding-top: 30px;
 }
 
-.logo {
-	width: 223px;
-	height: 60px;
-}
-
-.header__nav {
+.header__list {
 	display: flex;
+	column-gap: 58px;
 }
 
 .header__item {
@@ -47,9 +43,7 @@ body {
 	font-weight: 600;
 	font-size: 18px;
 	line-height: 27px;
-	margin-right: 58px;
 	position: relative;
-	z-index: 1;
 	transition: all 0.3s ease;
 }
 
@@ -66,7 +60,7 @@ body {
 	width: 120%;
 	height: 110%;
 	background-color: rgba(250, 250, 250, 0.3);
-	z-index: -1;
+	z-index: 0;
 	border-top-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	transition: all 0.3s ease;
@@ -91,16 +85,14 @@ body {
 	z-index: -1;
 }
 
-.header__anonce {
-	display: flex;
-	flex-direction: column;
+.header__announcement {
 	position: absolute;
 	top: 70%;
 	left: 405px;
 	transform: translateY(-50%);
 }
 
-.anonce__title {
+.announcement__title {
 	font-weight: 700;
 	font-size: 48px;
 	line-height: 72px;
@@ -108,7 +100,7 @@ body {
 	margin-bottom: 10px;
 }
 
-.anonce__text {
+.announcement__text {
 	font-weight: 700;
 	font-size: 100px;
 	line-height: 150px;
@@ -122,13 +114,13 @@ body {
 	width: 1100px;
 	margin: 0 auto;
   margin-bottom: 179px;
-  box-sizing: content-box;
 	justify-content: space-between;
 	position: relative;
 	top: -50px;
 }
 
 .news__item {
+	width: 350px;
 	position: relative;
 }
 
@@ -138,18 +130,16 @@ body {
   pointer-events: none;
 }
 
-.news__text {
-	display: flex;
-	align-items: center;
-	position: absolute;
-	top: 212px;
-	text-align: left;
-	padding-left: 20px;
-	width: 100%;
-	height: 30%;
+.news__box {
 	background-color: rgba(122, 102, 204, 0.7);
-	border-top-left-radius: 21px;
-	border-bottom-right-radius: 21px;
+	border-radius: 21px 0 21px 0;
+	padding: 20px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+
+.news__text {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 24px;
@@ -162,7 +152,6 @@ body {
 	width: 1110px;
 	margin: 0 auto;
 	display: flex;
-	justify-content: space-between;
 	margin-bottom: 151px;
 }
 
@@ -205,7 +194,6 @@ body {
 }
 
 .about__item {
-	display: flex;
 	font-weight: 600;
 	font-size: 17px;
 	line-height: 27px;
@@ -255,7 +243,6 @@ body {
 /* REVIEW */
 
 .review {
-	display: flex;
 	position: relative;
 	margin: 0 auto;
 	margin-bottom: 265px;
@@ -277,13 +264,17 @@ body {
 	line-height: 27px;
 	color: white;
 	margin-bottom: 25px;
+	position: relative;
 }
 
-.review__line {
+.review__quote::before {
+	content: '';
+	display: block;
 	width: 520px;
 	height: 2px;
 	background-color: white;
-	margin-bottom: 25px;
+	position: absolute;
+	top: calc(100% + 15px);
 }
 
 .review__link:hover {
@@ -298,7 +289,7 @@ body {
 }
 
 .accent {
-	color: #7a66cc;
+	color: var(--color-purple);
 	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -338,39 +329,38 @@ body {
 	flex-direction: column;
 }
 
-.list___title {
+.list__title {
 	display: flex;
 	align-items: center;
 	margin-bottom: 60px;
 }
 
-.list___head {
+.list__head {
 	font-weight: 700;
 	font-size: 48px;
 	line-height: 72px;
 	color: #ffffff;
 }
 
-.list___player {
+.list__player {
 	margin-bottom: 50px;
 }
 
-.list___tracks {
+.list__tracks {
 	margin-bottom: 50px;
 }
 
-.list___item {
+.list__item {
 	display: flex;
 	margin-bottom: 20px;
 }
 
-.list___item:last-child {
+.list__item:last-child {
 	margin-bottom: 0;
 }
 
 .item__song {
 	display: inline-block;
-	font-style: normal;
 	font-size: 18px;
 	line-height: 27px;
 	color: #ffffff;
@@ -379,7 +369,6 @@ body {
 }
 
 .item__number {
-	font-style: normal;
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 21px;
@@ -399,7 +388,6 @@ body {
 }
 
 .links__text {
-	font-style: normal;
 	font-size: 24px;
 	line-height: 36px;
 	color: #ffffff;
@@ -412,6 +400,7 @@ body {
 	line-height: 21px;
 	font-size: 14px;
 	color: #ffffff;
+	transition: all .3s linear;
 }
 
 .resource {
@@ -419,7 +408,21 @@ body {
 	align-items: center;
 }
 
-.resource-logo {
+/* transition у path нужен для плавности hover */
+
+path {
+	transition: all .3s linear;
+}
+
+.resource:hover path {
+	fill: var(--color-purple);
+}
+
+.resource:hover .resource__text {
+	color: var(--color-purple);
+}
+
+.resource__platform-icon {
 	margin-right: 10px;
 }
 
@@ -440,30 +443,26 @@ body {
 	border-bottom-right-radius: 30px;
 }
 
-.club-photo {
+.gallery__item_club {
 	grid-row-start: 1;
 	grid-row-end: 3;
 }
 
-.photo-dj {
-	grid-column-start: 2;
-	grid-column-end: 4;
+.gallery__item_dj {
+	grid-area: 2/2/3/4;
 	position: relative;
 }
 
-.car-photo-1 {
+.gallery__item_car {
 	grid-area: 1/2/2/3;
 }
 
-.car-photo-2 {
+.gallery__item_car-back {
 	grid-area: 1/3/2/4;
 }
 
-.img-handsup {
-	grid-row-start: 1;
-	grid-row-end: 3;
-	grid-column-start: 4;
-	grid-column-end: 5;
+.gallery__item_hands {
+	grid-area: 1/4/3/5;
 }
 
 /* EVENTS */
@@ -480,8 +479,6 @@ body {
 	background-color: #2e2b2b;
 	border-top-left-radius: 30px;
 	border-bottom-right-radius: 30px;
-
-	position: relative;
 	margin: 0 30px !important;
 }
 
@@ -537,6 +534,7 @@ body {
 	position: absolute;
 	bottom: 0;
 	right: 0;
+	cursor: pointer;
   transition: all 0.3s ease;
 }
 
@@ -560,11 +558,16 @@ background: grey;
 
 .footer__creditials {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	margin-bottom: 60px;
+	width: 542px;
 }
-.creditials__column1 {
+
+.creditials__column_bold {
 	font-weight: 600;
+}
+
+.creditials__column {
 	font-size: 18px;
 	line-height: 27px;
 	text-transform: uppercase;
@@ -573,23 +576,16 @@ background: grey;
 	text-align: right;
 }
 
-.creditials__column2 {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 27px;
-	text-transform: uppercase;
-	color: #ffffff;
+.creditials__column_align-left {
+	text-align: left;
 }
 
 .footer__links {
 	width: 510px;
 	margin: 0 auto;
-
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 100px;
-	position: relative;
 }
 
 .footer__copyright {
@@ -616,11 +612,6 @@ background: grey;
 	height: 500px;
 }
 
-/* .slick-slide  {
-
-	width: 350px !important;
-} */
-
 
 .next, .prev {
 	color: white;
@@ -632,6 +623,12 @@ background: grey;
 	position: relative;
 	top: 200px;
 	background-color: transparent !important;
+	cursor: pointer;
+	transition: all .3s linear;
+}
+
+.next:hover, .prev:hover {
+	opacity: .6;
 }
 
 /* .next {
