--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
 	border-top-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	transition: all 0.3s ease;
+	pointer-events: none;
 }
 
 .header__item:hover::before {
@@ -480,6 +481,7 @@ path {
 	border-top-left-radius: 30px;
 	border-bottom-right-radius: 30px;
 	margin: 0 30px !important;
+	position: relative;
 }
 
 .event:nth-child(4) {
@@ -527,7 +529,7 @@ path {
 	line-height: 24px;
 	text-transform: uppercase;
 	color: #ffffff;
-	width: 180px;
+	width: 40%;
 	height: 60px;
 	background: var(--color-purple);
 	border-radius: 30px 0px;
